pkl-core/src/test/files/LanguageSnippetTests/input/errors/binopDifferentLine.pkl
binop_result: Int = 1 

/*comment*/- 
  
/*comment*/ 1
